# MIL-STD-750

./: .gitignore  .gitmodules  TODO.md  example.py  pyproject.toml  scope.csv
SerialCommunication/: main.LST  main.c  template  template.M51  template.build_log.htm  template.hex  template.plg  template.uvgui.hzm  template.uvopt  xinxing.LST
doc/: CT2004A用户手册-v3.docx  CT2004计量规程要求.docx  会议记录.pptx  晶体管直流安全工作区测试系统问题交流.docx  电阻计量步骤详解.docx
installer/: CMakeLists.txt  icon.rc  launcher.cpp  main.cpp  vcpkg.json
launcher/: CMakeLists.txt  main.cpp
new/: chart.py  config.json  dmm.py  main.py  power.py  refer.py  refer.ui  resist.py  scope.ui  table_csv.py  types.py  worker.py
new/args/: __init__.py  args.py  args.ui
new/device/: __init__.py  device.py
new/exec/: __init__.py  exec.py  exec.ui
new/refer/: __init__.py  args.py  args.ui  panel.py  refer.py  refer.ui  task.py
new/scope/: __init__.py  scope.py
new/worker/: common.py  worker.py
src/: __init__.py  chart.py  config.json  context.py  device.py  device.ui  dmm.py  main.old.py  main.py  main.ui  main_ui.py  power.py  pyproject.toml  resist.py  scope.py  style.qss  test.py  test.ui
src/mil_std_750/: __init__.py  config.json  dmm.py  main.py  power.py  resist.py  style.qss
src/mil_std_750/device/: device.ui
src/mil_std_750/refer/: args.ui  panel.py  task.py
