[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mil_std_750"
version = "1.1.0"
description = "MIL-STD-750 test methods and procedures"
requires-python = ">=3.12"
dependencies = [
    "pyside6", "pyvisa", "matplotlib", "numpy", "debugpy"
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "*_ui.py"
]
include = [
    "src"
]

[tool.hatch.build.targets.wheel]
artifacts = [
    "*_ui.py"
]
